--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>calculadora</title>
-    <script class="js">
-        
-    </script>
+    <title>Calculadora</title>
     <style>
-
+        /* Your CSS styles here */
         html{
             box-sizing: border-box;
             height: 100%;
@@ -77,58 +74,78 @@
 </head>
 <body>
     <div class="wrapper"> 
-        <section class="screen">
+        <section class="screen" id="screen">
             0
         </section>
 
-        <section class="calc-button">
+        <section class="calc-buttons">
             <div class="calc-button-row">
-                <button class="calc-button double">
-                    c
-                </button>
-                <button class="calc-button">
-                    ←
-                </button>
-                <button class="calc-button">
-                    ÷
-                </button>
+                <button class="calc-button" onclick="clearScreen()">C</button>
+                <button class="calc-button" onclick="deleteLast()">←</button>
+                <button class="calc-button" onclick="appendOperator('/')">÷</button>
             </div>
             <div class="calc-button-row">
-                <button class="calc-button">
-                    7
-                </button>
-                <button class="calc-button">
-                    8
-                </button>
-                <button class="calc-button">
-                    9
-                </button>
-                <button class="calc-button">
-                    ×
-                </button>
+                <button class="calc-button" onclick="appendNumber(7)">7</button>
+                <button class="calc-button" onclick="appendNumber(8)">8</button>
+                <button class="calc-button" onclick="appendNumber(9)">9</button>
+                <button class="calc-button" onclick="appendOperator('*')">×</button>
             </div>
             <div class="calc-button-row">
-                <button class="calc-button">
-                    4
-                </button>
-                <button class="calc-button">
-                    5
-                </button>
-                <button class="calc-button">
-                    6
-                </button>
-                <button class="calc-button">
-                    −
-                </button>
+                <button class="calc-button" onclick="appendNumber(4)">4</button>
+                <button class="calc-button" onclick="appendNumber(5)">5</button>
+                <button class="calc-button" onclick="appendNumber(6)">6</button>
+                <button class="calc-button" onclick="appendOperator('-')">−</button>
             </div>
             <div class="calc-button-row">
-                <button class="calc-button">
-                    1
-                </button>
-                <button class="calc-button">
-                    2
-                </button>
-                <button class="calc-button">
-                    3        
-                </button>
-                <button class="calc-button
+                <button class="calc-button" onclick="appendNumber(1)">1</button>
+                <button class="calc-button" onclick="appendNumber(2)">2</button>
+                <button class="calc-button" onclick="appendNumber(3)">3</button>
+                <button class="calc-button" onclick="appendNumber(0)">0</button>
+            </div>
+            <div class="calc-button-row">
+                <button class="calc-button" onclick="calculate()">=</button>
+                <button class="calc-button" onclick="appendOperator('+')">+</button>
+            </div>
+        </section>
+    </div>
+
+    <script>
+        let screen = document.getElementById('screen');
+        let expression = '';
+
+        function appendNumber(number) {
+            expression += number;
+            updateScreen();
+        }
+
+        function appendOperator(operator) {
+            expression += operator;
+            updateScreen();
+        }
+
+        function clearScreen() {
+            expression = '';
+            updateScreen();
+        }
+
+        function deleteLast() {
+            expression = expression.slice(0, -1);
+            updateScreen();
+        }
+
+        function calculate() {
+            try {
+                let result = eval(expression);
+                expression = result.toString();
+                updateScreen();
+            } catch (error) {
+                alert('Erro na expressão!');
+            }
+        }
+
+        function updateScreen() {
+            screen.innerText = expression || '0';
+        }
+    </script>
+</body>
+</html>
